# critic-actor

./: README.md  main.py  pyproject.toml
configs/environments/browsecomp/: browsecomp.yaml
configs/environments/gpqa/: gpqa.yaml
configs/environments/hle/: hle.yaml
configs/model/: cria_attn_pool.yaml  cria_attn_pool_cos.yaml  cria_last.yaml  cria_last_cos.yaml
configs/model/api/: oai_async_gpt5.yaml  oai_async_gpt5_mini.yaml  oai_gpt4_1.yaml  oai_gpt4_1_mini.yaml  oai_gpt4_1_nano.yaml  oai_gpt5.yaml  oai_gpt5_mini.yaml  oai_gpt5_nano.yaml
configs/model/hf/: llama3_1_8b_inst.yaml  qwen3_4b_inst_2507.yaml  qwen3_4b_t2507.yaml
configs/replay_buffer/: cria.yaml
configs/trainers/: critic_actor.yaml  critic_actor_feedback.yaml  critic_actor_feedback_socratic.yaml  critic_actor_reinforce.yaml
src/critic_actor/: __init__.py  optimizers.py
src/critic_actor/environments/: __init__.py  base.py
src/critic_actor/environments/browsecomp_plus/: data.py  environment.py  fewshot_prompts.py  grader.py
src/critic_actor/environments/gpqa/: environment.py  grader.py
src/critic_actor/environments/hle/: environment.py  grader.py
src/critic_actor/llm/: __init__.py  base.py  openai.py
src/critic_actor/model/: __init__.py  checkpoints.py  critic_actor.py  huggingface.py  inference_utils.py  peft.py
src/critic_actor/replay_buffer/: __init__.py  base.py  critic_actor.py  utils.py
src/critic_actor/trainers/: __init__.py  base.py  critic_actor.py  critic_actor_feedback.py  critic_actor_reinforce.py
src/critic_actor/utils/: __init__.py  setup.py
(+6 files in other folders)
