[project]
name = "critic-actor"
version = "0.1.0"
description = "Guiding your test-time compute with RL (your critic is an actor now)"
readme = "README.md"
authors = [
    { name = "Michael Zhang", email = "mzhang2016@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "matplotlib>=3.10.5",
    "neptune-scale>=0.21.0",
    "numpy>=2.3.2",
    "omegaconf>=2.3.0",
    "openai>=1.100.0",
    "peft>=0.17.0",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "torch>=2.8.0",
    "tqdm",
    "transformers>=4.55.2",
    "wandb>=0.21.1",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
